[tool.poetry]
name = "adkllama"  # Укажите уникальное имя проекта
version = "0.1.0"
description = "A project for vector search with Qdrant"
authors = ["Oleg <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
llama-index = "^0.10.0"
llama-index-vector-stores-qdrant = "^0.2.0"
qdrant-client = "^1.9.0"
langchain-openai = "^0.1.0"
langchain-qdrant = "^0.1.0"
sentence-transformers = "^2.6.0"
pandas = "^2.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"